Bug 94614 - latest xf86-video-ati from git doesn't build
Summary: latest xf86-video-ati from git doesn't build
Status: CLOSED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: PowerPC Linux (All)
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-18 13:40 UTC by joro-2013
Modified: 2016-03-24 10:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description joro-2013 2016-03-18 13:40:44 UTC
The build fails with the error message

  CC     radeon_kms.lo
radeon_kms.c: In function 'radeon_scanout_do_update':
radeon_kms.c:396:18: error: 'struct _xf86Crtc' has no member named 'driverIsPerformingTransform'
     if (xf86_crtc->driverIsPerformingTransform) {

That's on Ubuntu Precise. Maybe the Xorg server is too old ?
Comment 1 Rin Rozen 2016-03-19 23:06:10 UTC
(In reply to joro-2013 from comment #0)
> The build fails with the error message
> 
>   CC     radeon_kms.lo
> radeon_kms.c: In function 'radeon_scanout_do_update':
> radeon_kms.c:396:18: error: 'struct _xf86Crtc' has no member named
> 'driverIsPerformingTransform'
>      if (xf86_crtc->driverIsPerformingTransform) {
> 
> That's on Ubuntu Precise. Maybe the Xorg server is too old ?

What is Xorg server version? X.Org 1.18.2 on debian testing 4.3.0-1-amd64 x86_64 compiled fine today. (master branch)
Comment 2 joro-2013 2016-03-20 13:49:50 UTC
Xorg.log says

X.Org X Server 1.11.3
Release Date: 2011-12-16
[    30.627] X Protocol Version 11, Revision 0

[    30.628] xorg-server 2:1.11.4-0ubuntu10.17 (For technical support please see
 http://www.ubuntu.com/support) 

On the other hand until recently the driver built fine from git with this setup
Comment 3 Michel Dänzer 2016-03-24 09:05:32 UTC
Thanks for the report, fixed in Git:

commit bde466e5d44cad64b4e4eceaa5de80fdbf86356e
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Wed Mar 23 18:16:42 2016 +0900

    Fix build against older versions of xserver
Comment 4 joro-2013 2016-03-24 10:34:34 UTC
build succeeded with latest from git


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.