Fix build against older versions of xserver

Also slightly clean up the error handling in radeon_scanout_do_update.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=94614

Reviewed-by: Alex Deucher <alexander.deucher@amd.com>