src/radeon_kms.c
@@ -393,6 +393,7 @@ radeon_scanout_do_update(xf86CrtcPtr xf86_crtc, int scanout_id)
     force = info->accel_state->force;
     info->accel_state->force = TRUE;
 
+#if XF86_CRTC_VERSION >= 4
     if (xf86_crtc->driverIsPerformingTransform) {
 	SourceValidateProcPtr SourceValidate = pScreen->SourceValidate;
 	PictFormatPtr format = PictureWindowFormat(pScreen->root);
@@ -415,14 +416,14 @@ radeon_scanout_do_update(xf86CrtcPtr xf86_crtc, int scanout_id)
 	if (!dst) {
 	    ErrorF("Failed to create destination picture for transformed scanout "
 		   "update\n");
-	    goto out;
+	    goto free_src;
 	}
 
 	error = SetPictureTransform(src, &xf86_crtc->crtc_to_framebuffer);
 	if (error) {
 	    ErrorF("SetPictureTransform failed for transformed scanout "
 		   "update\n");
-	    goto out;
+	    goto free_dst;
 	}
 
 	if (xf86_crtc->filter)
@@ -443,9 +444,14 @@ radeon_scanout_do_update(xf86CrtcPtr xf86_crtc, int scanout_id)
 			 extents.y2 - extents.y1);
 	pScreen->SourceValidate = SourceValidate;
 
-	FreePicture(src, None);
+ free_dst:
 	FreePicture(dst, None);
-    } else {
+ free_src:
+	FreePicture(src, None);
+    } else
+ out:
+#endif /* XF86_CRTC_VERSION >= 4 */
+    {
 	GCPtr gc = GetScratchGC(pDraw->depth, pScreen);
 
 	ValidateGC(pDraw, gc);
@@ -459,7 +465,6 @@ radeon_scanout_do_update(xf86CrtcPtr xf86_crtc, int scanout_id)
 
     radeon_cs_flush_indirect(scrn);
 
- out:
     info->accel_state->force = force;
 
     return TRUE;
@@ -607,8 +612,11 @@ static void RADEONBlockHandler_KMS(BLOCKHANDLER_ARGS_DECL)
     for (c = 0; c < xf86_config->num_crtc; c++) {
 	if (info->tear_free)
 	    radeon_scanout_flip(pScreen, info, xf86_config->crtc[c]);
-	else if (info->shadow_primary ||
-		 xf86_config->crtc[c]->driverIsPerformingTransform)
+	else if (info->shadow_primary
+#if XF86_CRTC_VERSION >= 4
+		 || xf86_config->crtc[c]->driverIsPerformingTransform
+#endif
+	    )
 	    radeon_scanout_update(xf86_config->crtc[c]);
     }
 
